// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> snapshots renders a placeholder 1`] = `
.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-right: 24px;
  padding-left: 12px;
  cursor: pointer;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-right: 24px;
  padding-left: 12px;
  cursor: pointer;
  height: 36px;
  box-sizing: border-box;
  border-radius: 2px;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(0,0%,45%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .c1 {
  padding: 0;
}

.c2 div:last-child {
  margin-left: auto;
}

.c4 {
  position: absolute;
  right: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  height: 36px;
  line-height: 34px;
  position: relative;
  width: 256px;
  box-sizing: border-box;
}

<div
  className="c0"
  title="Select an item"
>
  <div
    className="c1 dropdown-toggle c2"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c1 c3"
      disabled={false}
    >
      Select an item
    </div>
    <span
      className="fa fa-caret-down c4"
    />
  </div>
</div>
`;

exports[`<Dropdown /> snapshots renders default 1`] = `
.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-right: 24px;
  padding-left: 12px;
  cursor: pointer;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-right: 24px;
  padding-left: 12px;
  cursor: pointer;
  height: 36px;
  box-sizing: border-box;
  border-radius: 2px;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(0,0%,45%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .c1 {
  padding: 0;
}

.c2 div:last-child {
  margin-left: auto;
}

.c4 {
  position: absolute;
  right: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  height: 36px;
  line-height: 34px;
  position: relative;
  width: 256px;
  box-sizing: border-box;
}

<div
  className="c0"
  title="First Thing"
>
  <div
    className="c1 dropdown-toggle c2"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c1 c3"
      disabled={false}
    >
      First Thing
    </div>
    <span
      className="fa fa-caret-down c4"
    />
  </div>
</div>
`;
